replaced sidebar in home with js edition

--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -16,7 +16,7 @@
     overflow: hidden; /* Hide overflowing text */
 }
 
-.sidebar-menu:hover {
+.sidebar-menu.expanded {
     width: 150px; /* Expanded width */
 }
 
