dynamically added recipes using js

--- a/templates/recipe-grid.html
+++ b/templates/recipe-grid.html
@@ -1,9 +1,9 @@
 <ul class="recipe-grid">
     <li class="recipe-item">
         <a href="recipes/plain-cake.html">
-            <img src="assets/images/plain-cake.jpg" alt="Recipe 1">
-            <h2>Plain Cake</h2>
-            <p>A very boring plain cake.</p>
+            <img class="recipe-item-image" src="assets/images/plain-cake.jpg" alt="Recipe 1">
+            <h2 class="recipe-item-title">Plain Cake</h2>
+            <p class="recipe-item-description">A very boring plain cake.</p>
         </a>
         <p class="image-license">Image licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/" target="_blank">Attribution-NonCommercial-NoDerivs</a> by <a href="https://www.flickr.com/photos/reid-bee/">Reid Bee</a></p>
         <div class="tags">
