dynamically populated recipe details

--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -4,7 +4,7 @@
     <base href="/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food Template</title>
+    <title></title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/recipe-details.css">
     <link rel="stylesheet" href="assets/css/footer.css">
@@ -12,28 +12,23 @@
     <link rel="stylesheet" href="assets/css/layout.css">
     <link rel="stylesheet" href="assets/css/components.css">
     <link rel="stylesheet" href="assets/css/sidebar.css">
+    <link rel="shortcut icon" href="assets/icons/favicon.ico">
+    <script src="assets/js/load-components.js" defer></script>
+    <script src="assets/js/get-recipe-details.js" defer></script>
     <script src="https://kit.fontawesome.com/8725ebc5c8.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <h1><a href="home.html">Welcome to Recipe Site</a></h1>
     </header>
     <main>
         <div class="sidebar">
-            <ul class="sidebar-menu">
-                <li><a href="home.html"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="about.html"><i class="fas fa-info-circle"></i> About</a></li>
-                <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
-                <li><a href="tags.html"><i class="fas fa-tags"></i> Tags</a></li>
-            </ul>
         </div>
         <div class="content">
-            <h1>Food</h1>
+            <h1 class="recipe-title">Food</h1>
             <div class="recipe-intro">
-                <img src="assets/images/onigiri.jpg" alt="Onigiri" class="recipe-image">
-                <p>description</p>
-                <p class="image-license">Photo by <a href="https://unsplash.com/@themangomonster?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Daniel Téllez Girón</a> on <a href="https://unsplash.com/photos/a-piece-of-sushi-sitting-on-top-of-a-wooden-cutting-board-ZOINPNtpvGI?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
-                </p>
+                <img src="" alt="" class="recipe-image">
+                <p class="recipe-description"></p>
+                <p class="image-license"></p>
             </div>
             
             <section class="recipe-details">
@@ -43,30 +38,21 @@
                     <p><strong>Cook Time:</strong> 0 minutes</p>
                     <p><strong>Total Time:</strong> 0 minutes</p>
                     <div class="tags">
-                        <a href="tags.html" class="tag">tag</a>
                     </div>
                 </div>
                 <div class="ingredients-tools">
-                <ul class="ingredients-list">
-                    <h2 class="section-title">Ingredients</h2>
-                    <li class="ingredient-item">food</li>
-                </ul>
-                <ul class="tools-list">
-                    <h2 class="section-title">Tools</h2>
-                    <li class="ingredient-item">a cook</li>
-                </ul>
+                    <ul class="ingredients-list">
+                    </ul>
+                    <ul class="tools-list">
+                    </ul>
                 </div>
                 <h2 class="section-title">Instructions</h2>
                 <ol class="instructions-list">
-                    <li class="instruction-step">cooka da food</li>
                 </ol>
             </section>
-        </div>  
-        <div class="sidebar"/>
         </div>
     </main>
     <footer>
-        <p>&copy; 2025 Peder S. All rights reserved.</p>
     </footer>
 </body>
 </html>
